--- a/tsconfig-build.json
+++ b/tsconfig-build.json
@@ -22,5 +22,8 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "allowSyntheticDefaultImports": true,
+    "paths": {
+      "@mui/styled-engine": ["./node_modules/@mui/styled-engine-sc"]
+    }
   }
 }
