--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -34,9 +34,7 @@ jobs:
           npm install @microsoft/eslint-formatter-sarif@2.1.7
 
       - name: Run ESLint
-        run: npx eslint .
-          --ext .js,.jsx,.ts,.tsx
-          --format @microsoft/eslint-formatter-sarif
+        run: npx eslint src/
           --output-file eslint-results.sarif
         continue-on-error: true
 
