--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -35,11 +35,4 @@ jobs:
 
       - name: Run ESLint
         run: npx eslint src/
-          --output-file eslint-results.sarif
-        continue-on-error: true
-
-      - name: Upload analysis results to GitHub
-        uses: github/codeql-action/upload-sarif@v2
-        with:
-          sarif_file: eslint-results.sarif
-          wait-for-processing: true
+        continue-on-error: false
