--- a/lib/package.json
+++ b/lib/package.json
@@ -13,17 +13,14 @@
   ],
   "main": "dist/index.js",
   "module": "dist/index.es.js",
+  "typeings": "dist/inder.d.ts",
   "files": [
     "dist"
   ],
   "type": "module",
   "scripts": {
-    "build": "rm -rf ./dist & rollup -c",
-    "build-watch": "rollup -c -w",
-    "start": "react-scripts start",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "react-scripts build",
+    "build": "tsup",
+    "build-watch": "tsup --watch",
     "deploy": "gh-pages -d build",
     "eslint": "eslint src/"
   },
@@ -42,32 +39,13 @@
     "styled-components": "^5.3.9"
   },
   "devDependencies": {
-    "@emotion/core": "^11.0.0",
-    "@emotion/react": "^11.10.6",
-    "@fontsource/roboto": "^4.5.8",
-    "@mui/icons-material": "^5.11.11",
-    "@mui/lab": "^5.0.0-alpha.123",
-    "@mui/material": "^5.11.13",
-    "@mui/styled-engine-sc": "^5.11.11",
-    "@rollup/plugin-node-resolve": "^15.0.1",
-    "@rollup/plugin-typescript": "^11.0.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.16",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "@types/styled-components": "^5.1.26",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "eslint": "^8.52.0",
-    "gh-pages": "^6.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "rollup": "^3.19.1",
-    "rollup-plugin-peer-deps-external": "^2.2.4",
-    "styled-components": "^5.3.9",
-    "typescript": "^4.9.5"
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7",
+    "tsup": "^8.3.0",
+    "typescript": "^5.6.3"
   },
   "eslintConfig": {
     "extends": [
